# tux-panel

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY.md  README.md  TROUBLESHOOTING_INSTALLER.md  package-lock.json  package.json
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: AIChatbot.jsx  AISettingsModal.jsx  ConfigEditorTab.jsx  Layout.jsx  SemanticConfigForm.jsx  TerminalPane.jsx
client/src/contexts/: AuthContext.jsx  TerminalContext.jsx  ThemeContext.jsx
client/src/lib/: api.js  (+1 more)
docker/guacd/: Dockerfile
docs/: ARCHITECTURE.md  DOCUMENTATION.md  ROADMAP.md
installer/: LICENSE  README.md  build-appimage.sh  patch.sh  pyproject.toml
installer/appimage/: AppRun  org.tuxpanel.desktop  org.tuxpanel.installer.appdata.xml  org.tuxpanel.installer.desktop  tuxpanel-tray.desktop
installer/man/: tuxpanel-installer.1
installer/src/tuxpanel_installer/: __init__.py  __main__.py  app.py  components.py  constants.py  distro.py  installer.py  systemd.py  utils.py
installer/src/tuxpanel_installer/pages/: __init__.py  components.py  config.py  finish.py  progress.py  welcome.py
installer/src/tuxpanel_installer/tray/: __init__.py  indicator.py
installer/src/tuxpanel_installer/widgets/: __init__.py  component_card.py
scripts/: install-deps.sh  setup-guacd.sh  setup-rdp.sh  setup-sudoers.sh  setup-vnc.sh
server/: .env.example  convert.js  fix-routes.js  package-lock.json  package.json  tsconfig.json
server/polkit/: 50-tuxpanel.rules
server/scripts/: tuxpanel-edit-conf.sh  tuxpanel-priv-wrapper.sh
server/src/: app.js  app.ts  server.js  server.ts
(+68 files in other folders)
