[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuxpanel-installer"
version = "1.0.0"
description = "Cross-distro graphical installer and tray indicator for TuxPanel"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Joseph Abou Antoun" },
    { name = "Merheb Merheb" },
]
keywords = ["linux", "admin", "dashboard", "installer", "systemd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyQt6>=6.6",
    "dbus-python>=1.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/JosephDoesLinux/tux-panel"
Repository = "https://github.com/JosephDoesLinux/tux-panel"
Issues = "https://github.com/JosephDoesLinux/tux-panel/issues"

[project.scripts]
tuxpanel-installer = "tuxpanel_installer.__main__:main"

[project.gui-scripts]
tuxpanel-installer-gui = "tuxpanel_installer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
